# enterprise-knowledge-intelligence-platform

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  PRODUCT_DESIGN.md  README.md  RELEASE.md  SECURITY.md  analysis.md  architecture.md  audit.md  create_svg.py  docker-compose.yml  evaluation.md  malicious.db  plan.md  profile.txt  prometheus.yml  pyproject.toml  reliability_report.md  requirements.txt  run_demo.py  sample_outputs.md  sample_queries.md  security.md  setup.sh  test_bm25_perf.py  test_cors.py  test_cors2.py  test_cors3.py  test_cors4.py  test_leak.py  test_perf.py  test_perf_specific.py  test_rbac_bypass.py  (+3 more)
.Jules/: palette.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-pages.yml
.jules/: bolt.md  sentinel.md
benchmarks/: runner.py
data/: generate_data.py
diagrams/: architecture.mmd
docs/: CLI_Documentation.md  DATASETS.md  DIAGRAMS.md  FAQ.md  FUNCTIONALITY_AUDIT.md  Glossary.md  RUNBOOK.md  assets_plan.md
docs/api/: sdk.md  (+1 more)
evaluation/: metrics.py
portfolio/: architecture.md  case-study.md  lessons-learned.md  tradeoffs.md
reports/: DIAGRAMS.md  ENTERPRISE_READINESS.md  PRODUCTION_CHECKLIST.md  PRODUCT_DEMOS.md  RECRUITER_EXPERIENCE.md  SCREENSHOTS.md  VISUAL_ASSETS_PLAN.md  benchmark_report.md
src/: cli.py  config.py  pipeline.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_datasets.py  test_generation.py  test_generation_providers.py  test_rbac.py  test_retrieval.py  test_retrieval_components.py  test_sql_loader.py  test_vectorstore.py
website/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
(+150 files in other folders)
